# cost-optimized-LLM-inference-service

./: .env.example  .gitignore  CMakeLists.txt  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  test.txt
.github/workflows/: ci.yml
config/: gateway.json
include/: cache.h  config.h  cost_tracker.h  router.h  types.h
include/api/: endpoints.h
include/middleware/: auth.h  logger.h  rate_limiter.h
include/providers/: anthropic_provider.h  base_provider.h  groq_provider.h  openai_provider.h  provider_registry.h  together_provider.h
include/utils/: metrics.h  token_counter.h
src/: cache.cpp  config.cpp  cost_tracker.cpp  main.cpp  router.cpp
src/api/: admin.cpp  chat_completions.cpp  health.cpp
src/middleware/: auth.cpp  logger.cpp  rate_limiter.cpp
src/providers/: anthropic_provider.cpp  base_provider.cpp  groq_provider.cpp  openai_provider.cpp  provider_registry.cpp  together_provider.cpp
src/utils/: metrics.cpp  token_counter.cpp
tests/: test_auth.cpp  test_cache.cpp  test_cost_tracker.cpp  test_rate_limiter.cpp  test_router.cpp
